apps/umami/authentik-referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: umami-authentik
  namespace: authentik
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: umami
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: umami
  to:
    - group: ""
      kind: Service
      name: authentik-chart-server
